# Hillel

./: .gitignore  Main.qml  README.md
Lesson-1/: REUSABLE.md
Lesson-1/Example02/: CMakeLists.txt  main.cpp  mathHillel.cpp  mathHillel.h
Lesson-1/Example03/: CMakeLists.txt  lib.cpp  main.cpp
Lesson-1/Example04/: CMakeLists.txt
Lesson-1/Example04/libmath/: CMakeLists.txt  math_functions.cpp  math_functions.h
Lesson-10/qml/: CMakeLists.txt  Main.qml  counter.h  main.cpp  myanimation.cpp  myanimation.h
Lesson-10/widgets/: CMakeLists.txt  main.cpp  mainExampleNetwork.cpp  weatherapp.cpp  weatherapp.h
Lesson-11/: CMakeLists.txt  imageprocessor.cpp  imageprocessor.h  main.cpp  mainwindow.cpp  mainwindow.h
Lesson-12/: CMakeLists.txt  main.cpp
Lesson-14/CPP/: CMakeLists.txt  main.cpp  vector.h
Lesson-14/Pozniakov/: CMakeLists.txt  main.qml
Lesson-14/Qt QML Model/: CMakeLists.txt  Main.qml  main.cpp  mylistmodel.h
Lesson-15/: main.cpp  main1.cpp  main2.cpp
Lesson-16/: main.cpp  main1.cpp
Lesson-17/: comparators.cpp  iterators.cpp  ranges.cpp  sentinel.cpp  sfinae.cpp
Lesson-18/: MemoryModel.md  main.cpp  main1.cpp  main2.cpp  main_optim.cpp
Lesson-19/CRTP/: CRTP.md  main.cpp  main1.cpp  main2.cpp
Lesson-19/Covariants/: Cov.md  covariants.cpp  main.cpp
Lesson-19/Types/: Types.md  main.cpp
Lesson-2/: CMakeLists.txt  README.md  main.cpp  myStack.h
Lesson-2/KatherineSuprun/: CMakeLists.txt  main.cpp  vector.h
Lesson-2/MykolaRassulin/: CMakeLists.txt  MyMath.h  main.cpp
Lesson-2/Pozniakov/: CMakeLists.txt
Lesson-2/SashaChuiko/: CMakeLists.txt  OneWayList.h  main.cpp
Lesson-3/: main.cpp
Lesson-3/KatherineSuprun/: CMakeLists.txt  main.cpp
Lesson-4/: CMakeLists.txt  client2.cpp  main.cpp  server2.cpp
Lesson-4/KatherineSuprun/: CMakeLists.txt  main.cpp
Lesson-4/MykolaRassulin/: CmakeLists.txt  main.cpp  main1.cpp  результат get запроса.txt
Lesson-4/Pozniakov/: CMakeLists.txt
Lesson-4/server_client/: CMakeLists.txt  client.cpp  server.cpp
Lesson-5/Chuiko/: main.cpp
Lesson-5/FunctionPtr/: main.cpp
Lesson-5/MykolaRassulin/: CmakeLists.txt  main.cpp
Lesson-5/Pozniakov/: CMakeLists.txt  main.cpp
Lesson-5/Threads/: CMakeLists.txt  main(mutexes).cpp  main.cpp
Lesson-6/: CMakeLists.txt  MyClass.cpp  MyClass.h  aboba.txt  main.cpp  monitorFile.cpp
Lesson-7/: Application.h  CMakeLists.txt  IDatabase.h  MySQLDatabase.h  TestApplication.cpp
Lesson-8/: helloqtquick.qml
Lesson-8/Pozniakov/: CMakeLists.txt  appcore.cpp  appcore.h  main.cpp  main.qml
Lesson5-SuprunK/: CMakeLists.txt  Main.qml  counter.h  main.cpp
Lesson6-SuprunK/: CMakeLists.txt  game.cpp  game.h  helpfield.cpp  helpfield.h  mainwindow.cpp  mainwindow.h
Lesson7-SuprunKate/: CMakeLists.txt  Main.qml  main.cpp
temp/: CMakeLists.txt  testExpect.cpp
(+13 files in other folders)
